Completed html for the jollof page added a odered list for the dish preparation and also added some comments

--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -10,7 +10,7 @@
     <h1>The Peakest Dish ngl</h1>
     <p1>Jollof rice is the undisputed crown jewel of West African cuisine, a vibrant and aromatic one-pot masterpiece that sparks friendly "rice wars" over who prepares it best. At its heart, long-grain parboiled rice or jasmine rice is simmered in a rich, savory base of blended tomatoes, red bell peppers, onions, and scotch bonnets, which imparts a signature deep orange hue and a subtle, creeping heat. Infused with a fragrant medley of thyme, curry powder, and bay leaves, the rice absorbs every drop of the seasoned stock until it is perfectly tender and fluffy. Whether served at a festive wedding or a cozy Sunday dinner, Jollof rice is more than just a side dish,it is a smoky, flavorful celebration of cultural heritage that pairs beautifully with fried plantains and succulent grilled chicken.</p1>
     <h2>Ingredients</h2> <!-- list of ingredients unordered -->
-    <ul>  <!-- I proceeded to nest the lists -->
+    <ul>  <!-- I proceeded to nest the lists of ingredients -->
         <li>The Fresh Base</li>
         <ul>
             <li>3 large red bell peppers (tatashe), deseeded</li>
@@ -26,8 +26,35 @@
             <li>1/2 cup vegetable oil</li>
             <li>3 tbsp tomato paste (concentrate)</li>
         </ul>
-
+        <li>The Aromatics & Spices</li>
+        <ul>
+            <li>3-4 bay leaves</li>
+            <li>tbsp curry powder</li> 
+            <li>1 tsp dried thyme</li>
+            <li>2 bouillon cubes (e.g., Maggi or Knorr)</li>
+            <li>1 tsp garlic powder (or 3 cloves fresh minced garlic)</li>
+            <li>Salt to taste</li>
+            <li>1 tbsp butter (optional, for that final glossy sheen)</li>
+        </ul>
     </ul>
+    <h2>Prepeparation steps</h2>
+    <p3>The key to perfect Jollof rice is patience. You aren't just boiling rice; you are steaming it in a concentrated explosion of flavor. Follow these steps to ensure every grain is separate, tender, and seasoned to the bone.</p3>
+    <ol> <!-- preperation steps in an ordered list while the head of the list is bold -->
+        <li><p><strong>Prep the Flavor Base</strong></p>
+            <p1>Blend the red bell peppers, tomatoes, ginger, and one onion until completely smooth. Pour this mixture into a pot and boil it over medium-high heat for about 10-12 minutes until the water reduces and you're left with a thick, concentrated paste.</p1></li>
+        <li><p><strong>Sauté the Aromatics</strong></p>
+            <p1>In a large, heavy-bottomed pot, heat the vegetable oil. Slice the remaining onion and sauté until translucent. Add the tomato paste and fry it for 5-8 minutes, stirring constantly. You want the paste to turn a dark, brick-red color and lose its sour metallic taste.</p1></li>
+        <li><p><strong>Season the "Stew"</strong></p>
+            <p1>Add your boiled pepper puree to the fried tomato paste. Stir in the curry powder, thyme, garlic, bouillon cubes, bay leaves, and salt. Let this fry together for another 10 minutes until the oil starts to separate and rise to the top.</p1></li>
+        <li><p><strong>Prepare the Rice</strong></p>
+            <p1>Wash your rice thoroughly in warm water several times until the water runs clear. This removes excess starch and prevents the rice from becoming "soggy" or sticky.</p1></li>
+        <li><p><strong>Combine and Simmer</strong></p>
+            <p1>Add the washed rice to the pot and stir well so every grain is coated in the tomato base. Pour in your stock and the liquid should just barely cover the rice (about 1/2 to 1 inch above the surface).</p1></li>
+        <li><p><strong>The "Steam" Phase</strong></p>
+            <p1>This is the most important part. Cover the pot tightly with aluminum foil, then place the lid on top to trap every bit of steam. Turn the heat down to low. Let it cook for 25â€“30 minutes without opening the lid.</p1></li>
+        <li><p><strong>The Finish</strong></p>
+            <p1>Check if the rice is tender. If it's still a bit firm, give it another 5 minutes. Once done, stir in the butter and some fresh sliced onions or tomatoes if you like. Fluff the rice gently with a fork to avoid breaking the grains.</p1></li>
+    </ol>
     
     <p><a href="../index.html">Homepage</a></p>    
 </body>
